# dotfiles

./: .editorconfig  .gitmodules  Install.bat  Install.sh  InstallForRoot.sh  Install_remote.sh  Install_with_linuxbrew.sh  README.md  RapidSettingForWin.bat  RappidSetting.sh  RappidSettingForRoot.sh  dep  disableUSKeyboard.bat  ennableUSKeyboard.bat  fabfile.py  golang.sh  install.sh  install_devcontainer.sh  install_full.sh  install_ghq.sh  install_macos.sh  install_uv.sh  pyproject.toml  tasks.py  test.py
.devcontainer/: Dockerfile
Karabiner/: private.xml
arm_ubuntu/: tasks.py
atom/: CreateLink.bat  CreateLink.sh  atomfile  config.cson  init.coffee  keymap.cson  projects.cson  snippets.cson  styles.less
backup_mac/: backup.sh
bashrc/: bashrc  devcontainer.bashrc  devcontainer.sh  msys.sh  rootbashrc
c720chromebook/: Install.sh  _xbindkeysrc  _xmodmap  xmodmap.sh
chocolatey/: README.md  install.bat  packages.config
command/: DockerRemoveAllVolumes.sh  GoBuildForWindows  K380.sh  Makefile  RenameForScanSnap  RenameForScanSnap.go
debian/: setup.sh
dev/: SetupPythonDev.sh
embedded/: tasks.py
fish/: Install.sh  README.md  config.fish  fishd.784f4359182f
git/: .gitignore  __init__.py  fabfile.py  set-config.bat  set-config.sh  set-username.bat  set-username.sh  tasks.py
gnugp/: README.md
golang/: goget.sh  packages.yaml  tasks.py
homebrew/: Brewfile  README.md  __init__.py  fabfile.py  install.sh  run.sh  tasks.py
iThoughtHD/: MyBlack.itmz-style
iterm2/: README.md  com.googlecode.iterm2.plist  default.sh
karabiner-elements/: .editorconfig  (+2 more)
(+146 files in other folders)
