[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atsushi Morimoto (74th)", email = "74th.tech@gmail.com" }
]
dependencies = [
    "invoke>=2.2.0",
    "detect>=2020.12.3",
    "pyyaml>=6.0.1",
    "types-pyyaml>=6.0.12.20240724",
    "xonsh[full]>=0.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles"]
